# XOR-MC-Archive-Decrypt-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
locales/: en.yml  zh-CN.yml
src/: fs_ops.rs  main.rs  pack.rs  ui.rs
src/cryptography/: crypto.rs  decrypt.rs  ease_trojan.rs  mod.rs
src/network/: mod.rs  software_update.rs
src/utils/: check_mcbe_install.rs  mod.rs  pack.rs
src/utils/chunks/: mod.rs  overview.rs  scan.rs
src/utils/cli/: mod.rs  parse.rs  ui.rs
src/utils/filesystem/: aipe.rs  dir_setting.rs  fs_ops.rs  mod.rs  pack.rs  pack_mode.rs
