[package]
name = "crypt-dew-world"
version = "4.3.1"
edition = "2024"
authors = ["Lavaver", "HTMonkeyG (Original Node.js version)"]
description = "A Rust-based tool for encrypting and decrypting Minecraft saves, designed specifically for the NetEase version of Minecraft"
readme = "README.md"
repository = "https://github.com/Lavaver/Crypt-Dew-World"
license = "MIT"
keywords = ["util", "tool", "xor", "minecraft", "decrypt"]

[profile.release]
codegen-units = 2
opt-level = "z"
lto = true
panic = "abort"
strip = true

# The Cargo.toml was hoisted aboard by Crates (Crane).
# cargo [ˈkɑːɡəʊ] n. (船或飞机装载的) 货物；Rust 语言中的一个包管理器与构建工具。在四六级和考研真题中出现了 9 次

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "3.1.1"
crossterm = "0.29.0"
hex = "0.4.3"
indicatif = "0.18.4"
regex = "1.12.3"
tar = "0.4.45"
zip = "8.6.0"
walkdir = "2.5.0"
tokio = { version = "1.52.1", features = ["full"] }
rust-i18n = "4"
futures = "0.3.32"
anyhow = "1.0.102"
shen-nbt5 = "0.4.6"
sys-locale = "0.3.2"
self-replace = "1.5.0"
ureq = {version = "3", features = ["gzip"]}
serde_json = "1.0.149"
semver = "1.0.28"
inquire = "0.9.4"
tempfile = "3.27.0"
